force-app/main/default/objects/Lead/fields/Tax_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Reason__c</fullName>
    <label>Tax Exempt Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Tax Exempt</fullName>
            </value>
            <value>
                <fullName>EU reverse charge mechanism</fullName>
            </value>
            <value>
                <fullName>Third country jurisdictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>