force-app/main/default/objects/Lead/fields/TechnicalContact__c.field-meta.xml
<CustomField>
    <fullName>TechnicalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Contact</label>
    <type>Checkbox</type>
</CustomField>