force-app/main/default/objects/Lead/fields/Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Template_Branding__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-3198</description>
    <formula>IF(ISPICKVAL(Opportunity_Category_Hidden__c, &apos;MINI by orderbird&apos;),&apos;MINI&apos;, &apos;PRO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Branding</label>
    <type>Text</type>
</CustomField>