force-app/main/default/objects/Lead/fields/TS_Marketing_opt_in_update__c.field-meta.xml
<CustomField>
    <fullName>TS_Marketing_opt_in_update__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1313</description>
    <label>TS_Marketing opt-in update</label>
    <type>DateTime</type>
</CustomField>