force-app/main/default/objects/Lead/fields/UTMContent__c.field-meta.xml
<CustomField>
    <fullName>UTMContent__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>Tracking field for Online Marketing. Gets automatically filled with URL parameters attached to our campaigns for web2lead.</inlineHelpText>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>