force-app/main/default/objects/Lead/fields/UTMKEYWORD__c.field-meta.xml
<CustomField>
    <fullName>UTMKEYWORD__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1540</description>
    <label>UTMKEYWORD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>