force-app/main/default/objects/Lead/fields/WebformSID__c.field-meta.xml
<CustomField>
    <fullName>WebformSID__c</fullName>
    <label>WebformSID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>