force-app/main/default/objects/Lead/fields/Why_Interested__c.field-meta.xml
<CustomField>
    <fullName>Why_Interested__c</fullName>
    <description>Stakeholder: MKT with BI</description>
    <inlineHelpText>Why has the prospect considered orderbird in the first place? Filled by SDRs</inlineHelpText>
    <label>Why Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no info</fullName>
            </value>
            <value>
                <fullName>card reader / orderbird PAY</fullName>
            </value>
            <value>
                <fullName>Customers Recruit Customers</fullName>
            </value>
            <value>
                <fullName>Datev export</fullName>
            </value>
            <value>
                <fullName>easy to use</fullName>
            </value>
            <value>
                <fullName>free testing immediately</fullName>
            </value>
            <value>
                <fullName>law conformity</fullName>
            </value>
            <value>
                <fullName>great website</fullName>
            </value>
            <value>
                <fullName>innovative</fullName>
            </value>
            <value>
                <fullName>likes apple products</fullName>
            </value>
            <value>
                <fullName>looking for POS</fullName>
            </value>
            <value>
                <fullName>low cost solution</fullName>
            </value>
            <value>
                <fullName>Market leader</fullName>
            </value>
            <value>
                <fullName>personal sympathy</fullName>
            </value>
            <value>
                <fullName>recognised wireless ordering as benefit</fullName>
            </value>
            <value>
                <fullName>seasonal costs</fullName>
            </value>
            <value>
                <fullName>single-user solution for free</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>won prizes</fullName>
            </value>
            <value>
                <fullName>Founder award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>