force-app/main/default/objects/Lead/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <businessProcess>Lead Process for Sales</businessProcess>
    <description>to create a new lead for a potential customer</description>
    <label>Customer Lead</label>
</RecordType>