force-app/main/default/objects/Lead/recordTypes/Customer_Lead_MINI.recordType-meta.xml
<RecordType>
    <fullName>Customer_Lead_MINI</fullName>
    <active>true</active>
    <businessProcess>Lead Management Process</businessProcess>
    <label>MINI Lead</label>
</RecordType>