force-app/main/default/objects/Lead/recordTypes/Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Management Process</businessProcess>
    <description>to create a new lead for a potential partner</description>
    <label>Partner Lead</label>
</RecordType>