force-app/main/default/objects/Lead/validationRules/Address_fields_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_fields_mandatory</fullName>
    <active>false</active>
    <description>Make certain address fields required</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
NOT(ISPICKVAL(RejectedReason__c,&quot;Bad/ incomplete contact details&quot;)),

OR(
ISBLANK(Country),
ISBLANK(PostalCode),
ISBLANK(City)
)
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please fill the City, ZIP and Country!</errorMessage>
</ValidationRule>