force-app/main/default/objects/Lead/validationRules/Adress_City_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Adress_City_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),

OR(
ISNEW(),
ISCHANGED(City)),

ISBLANK( City )
)</errorConditionFormula>
    <errorDisplayField>City</errorDisplayField>
    <errorMessage>Please fill the City!</errorMessage>
</ValidationRule>