force-app/main/default/objects/Lead/validationRules/Adress_Country_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Adress_Country_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),

ISBLANK( Country )
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please fill the Country!</errorMessage>
</ValidationRule>