force-app/main/default/objects/Lead/validationRules/Adress_Zip_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Adress_Zip_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),

OR(
ISNEW(),
ISCHANGED(PostalCode)),

ISBLANK( PostalCode )
)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please fill the Zip Code!</errorMessage>
</ValidationRule>