force-app/main/default/objects/Lead/validationRules/LAC_provided.validationRule-meta.xml
<ValidationRule>
    <fullName>LAC_provided</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(CONTAINS( $Label.Admin_Users , $User.Id )), 

AND
(
 NOT(ISPICKVAL( LeadType__c, &apos;Partner&apos;)),
 ISBLANK(LAC_ID__c),
 ISPICKVAL(LAC_Shorthand__c, &apos;&apos;),
 ISPICKVAL(LeadSource, &apos;&apos;))
)</errorConditionFormula>
    <errorDisplayField>LAC_Shorthand__c</errorDisplayField>
    <errorMessage>You must provide the LAC ID or LAC shorthand</errorMessage>
</ValidationRule>