force-app/main/default/objects/Lead/validationRules/Opening_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Opening_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

NOT(CONTAINS( $Label.Admin_Users , $User.Id )), 

ISBLANK( OpeningDateNewVenue__c ), 
ISPICKVAL( NewVenue__c , &quot;Yes&quot;)  

)</errorConditionFormula>
    <errorDisplayField>OpeningDateNewVenue__c</errorDisplayField>
    <errorMessage>Please specify the opening date of the new venue!</errorMessage>
</ValidationRule>