force-app/main/default/objects/Lead/validationRules/Phone_format_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_format_required</fullName>
    <active>true</active>
    <description>Requires a standard phone number format for Phone</description>
    <errorConditionFormula>AND( 
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
$User.Id != &apos;00558000001bDOy&apos;,
NOT( $User.ProfileId = &quot;00e58000000SLnr&quot;),
NOT(ISPICKVAL(RejectedReason__c,&quot;Bad/ incomplete contact details&quot;)), 
NOT(ISBLANK(Phone)),
OR(
ISNEW(),
ISCHANGED(Phone)), 
NOT(
 OR(
   REGEX( Phone,&quot;[+]{1}[1-9]{2,2}[1-9]{1}[0-9]{3,15}&quot;),
   REGEX(Phone,&quot;[+]{1}[0-9]{2,3}[0-9]{1}[0-9]{3,15}&quot;),BEGINS(Phone,&quot;n/a&quot;)
))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>For phone numbers please consider the following format: 
+&quot;dial code&quot;+&quot;prefix code&quot;+&quot;phone number&quot; (without leading zero or any spaces), e.g.+4930123456789 
If the phone number is (still) unknown, enter &quot;n/a&quot;.</errorMessage>
</ValidationRule>