force-app/main/default/objects/Lead/validationRules/Restrictions_on_Street_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrictions_on_Street_Fields</fullName>
    <active>true</active>
    <description>Limits the address field to fit API requirements (Zuora)
https://jira.orderbird.com/browse/CRM-1188</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
NOT( 
OR( 
REGEX( 
Street, 
&quot;.{0,254}&quot; 
), 
REGEX( 
Street, 
&quot;.{0,254}\r\n.{0,254}&quot; 
),
ISNEW()
)  
)
)</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>You&apos;ve exceeded the max. allowed length (255) or lines (2). Please limit the address to only relevant information.</errorMessage>
</ValidationRule>