force-app/main/default/objects/Lead/validationRules/Unqualified_Reason_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason_mandatory</fullName>
    <active>true</active>
    <description>https://jira.orderbird.com/browse/SFDC-1403</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),

ISCHANGED(Status),
ISPICKVAL(Status , &quot;Unqualified&quot;),
ISPICKVAL( RejectedReason__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>RejectedReason__c</errorDisplayField>
    <errorMessage>Please specify a Reason!</errorMessage>
</ValidationRule>