force-app/main/default/objects/Lead/listViews/Calendly_Leads.listView-meta.xml
<ListView>
    <fullName>Calendly_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Calendly</value>
    </filters>
    <label>Calendly Leads</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Support_Management</roleAndSubordinates>
    </sharedTo>
</ListView>