force-app/main/default/objects/Lead/listViews/Created_TODAY.listView-meta.xml
<ListView>
    <fullName>Created_TODAY</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Origin__c</columns>
    <columns>Region__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>GCLID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAC_ID__c</field>
        <operation>equals</operation>
        <value>181</value>
    </filters>
    <label>Created TODAY</label>
</ListView>