force-app/main/default/objects/Lead/listViews/EBook_leads.listView-meta.xml
<ListView>
    <fullName>EBook_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Origin__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAC_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>contains</operation>
        <value>ebook</value>
    </filters>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>notContain</operation>
        <value>orderbird</value>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>notContain</operation>
        <value>Turf</value>
    </filters>
    <label>EBook NEW leads</label>
</ListView>