force-app/main/default/objects/Lead/listViews/ETL_inbox.listView-meta.xml
<ListView>
    <fullName>ETL_inbox</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Comments__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAC_ID__c</field>
        <operation>equals</operation>
        <value>309</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>notEqual</operation>
        <value>Hotel / Pension</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Customer</value>
    </filters>
    <label>ETL inbox</label>
</ListView>