force-app/main/default/objects/Lead/listViews/Facebook_Scraper.listView-meta.xml
<ListView>
    <fullName>Facebook_Scraper</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Comments__c</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Admin_flag_field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Channel__c</field>
        <operation>equals</operation>
        <value>Facebook Scraper</value>
    </filters>
    <label>New Facebook Scraper</label>
</ListView>