force-app/main/default/objects/Lead/listViews/FR_All_open_Leads.listView-meta.xml
<ListView>
    <fullName>FR_All_open_Leads</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Origin__c</columns>
    <columns>Region__c</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>FR</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>FR: All open Leads</label>
    <language>en_US</language>
</ListView>