force-app/main/default/objects/Lead/listViews/guest_management_form.listView-meta.xml
<ListView>
    <fullName>guest_management_form</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>equals</operation>
        <value>guest-management-form</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>guest-management-form</label>
</ListView>