force-app/main/default/objects/Lead/listViews/Inbound_Leads_FRANCE.listView-meta.xml
<ListView>
    <fullName>Inbound_Leads_FRANCE</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Origin__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Inbound,Partner,Trade Fair</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <filters>
        <field>First_Activity_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>FR: Inbound Leads</label>
    <language>en_US</language>
</ListView>