force-app/main/default/objects/Lead/listViews/Inbound_Leads_Region_OST_verified.listView-meta.xml
<ListView>
    <fullName>Inbound_Leads_Region_OST_verified</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Origin__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Region__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Inbound,Partner</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>DE Ost</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,New</value>
    </filters>
    <label>OST: Inbound Leads - verified</label>
    <language>en_US</language>
</ListView>