force-app/main/default/objects/Lead/listViews/INBOX_FR_Test.listView-meta.xml
<ListView>
    <fullName>INBOX_FR_Test</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Region__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Origin__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Inbound,Customer,Partner</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>ReferralContact__c</field>
        <operation>notEqual</operation>
        <value>METRO - DE,METRO - AT,METRO - FR</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>notEqual</operation>
        <value>DE Ost,DE Nord,DE West,DE Süd,Austria,Switzerland</value>
    </filters>
    <filters>
        <field>Origin__c</field>
        <operation>contains</operation>
        <value>FR</value>
    </filters>
    <filters>
        <field>PrimaryLanguage__c</field>
        <operation>equals</operation>
        <value>French</value>
    </filters>
    <label>INBOX FR</label>
    <sharedTo>
        <group>Sales_Team_FRANCE</group>
        <role>Lead_Management</role>
    </sharedTo>
</ListView>