force-app/main/default/objects/Lead/listViews/INBOX_Metro_Test.listView-meta.xml
<ListView>
    <fullName>INBOX_Metro_Test</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Region__c</columns>
    <columns>METROOpportunityID__c</columns>
    <columns>Origin__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Inbound,Customer,Partner</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>ReferralAccount__c</field>
        <operation>equals</operation>
        <value>Metro - DE,Metro - AT,METRO - FR</value>
    </filters>
    <label>INBOX Metro</label>
    <language>en_US</language>
    <sharedTo>
        <role>Lead_Management</role>
    </sharedTo>
</ListView>