force-app/main/default/objects/Lead/listViews/INBOX_MINI_Test_Leads.listView-meta.xml
<ListView>
    <fullName>INBOX_MINI_Test_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Channel__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Region__c</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAC_ID__c</field>
        <operation>equals</operation>
        <value>180</value>
    </filters>
    <label>MINI Device Reg. Leads</label>
</ListView>